Fix broken layout

--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -1,6 +1,7 @@
 
 header {
   padding: $gutter $gutter/3 $gutter*2;
+  background-color: white;
 }
 
 .inner {
